<resources>
    <string name="app_name">laundry</string>
    <string name="card_pelanggan_id">id_pelanggan</string>
    <string name="card_pelanggan_nama">nama_pelanggan</string>
    <string name="card_pelanggan_nohp">nohp_pelanggan</string>
    <string name="card_pelanggan_terdaftar">terdaftar</string>
    <string name="card_pelanggan_alamat">alamat</string>
    <string name="card_pelanggan_hubungi">hubungi</string>
    <string name="card_pelanggan_lihat">lihat</string>
    <string name="card_pegawai_cabang">cabang</string>
    <string name="card_pegawai_id">id_pegawai</string>
    <string name="card_pegawai_nama">nama_pegawai</string>
    <string name="card_tambah_pelanggan">tambah_pelanggan</string>
    <string name="card_tambah_nama">nama</string>
    <string name="card_tambah_namalengkap">nama_lengkap</string>
    <string name="card_tambah_nohp_aktif">nohp_aktif</string>
    <string name="card_nama_cabang">nama_cabang</string>
    <string name="card_simpan">simpan</string>
    <string name="card_tambah_pegawai">tambah_pegawai</string>
    <string name="card_layanan_id">id_layanan</string>
    <string name="card_layanan_nama">nama</string>
    <string name="card_layanan_harga">harga</string>
    <string name="card_tambah_layanan">tambah_layanan</string>
    <string name="card_pegawai_terdaftar">terdaftar</string>
    <string name="validasi_nama_pelanggan">nama_tidak_boleh_kosong</string>
    <string name="validasi_alamat_pelanggan">alamat_tidak_boleh_kosong</string>
    <string name="validasi_noHP_pelanggan">noHP_tidak_boleh_kosong</string>
    <string name="validasi_cabang_pelanggan">cabang_tidak_boleh_kosong</string>
    <string name="tambah_pelanggan_sukses">pelanggan_sukses</string>
    <string name="tambah_pelanggan_gagal">pelanggan_gagal</string>
    <string name="card_pegawai_alamat">pegawai_alamat</string>
    <string name="card_pegawai_nohp">pegawai_nohp</string>
    <string name="card_pegawai_hubungi">pegawai_hubungi</string>
    <string name="card_pegawai_lihat">pegawai_lihat</string>
    <string name="card_tambah_alamat">tambah_alamat</string>
    <string name="card_tambah_cabang">tambah_cabang</string>
    <string name="card_pegawai_simpan">pegawai_simpan</string>
    <string name="card_pelanggan_simpan">pelanggan_simpan</string>
    <string name="card_layanan_cabang">layanan_cabang</string>
    <string name="validasi_nama_pegawai">nama_pegawai</string>
    <string name="validasi_alamat_pegawai">alamat_pegawai</string>
    <string name="validasi_nohp_pegawai">nohp_pegawai</string>
    <string name="validasi_terdaftar_pegawai">terdaftar_pegawai</string>
    <string name="validasi_namacabang_pegawai">namacabang_pegawai</string>
    <string name="sukses_simpan_pegawai">simpan_pegawai</string>
    <string name="gagal_simpan_pegawai">gagalsi_simpan_pegawai</string>
    <string name="validasi_terdaftar_pelanggan">terdaftar_pelanggan</string>
    <string name="card_tambah_pelanggan_terdaftar">tambah_pelanggan_terdaftar</string>
    <string name="card_tambah_pelanggan_nohp_aktif">tambah_pelanggan_nohp_aktif</string>
    <string name="card_tambah_pelanggan_alamat">tambah_pelanggan_alamat</string>
    <string name="card_tambah_pelanggan_nama">tambah_pelanggan_nama</string>
    <string name="card_tambah_pegawai_cabang">tambah_pegawai_cabang</string>
    <string name="card_tambah_pegawai_terdaftar">tambah_pegawai_terdaftar</string>
    <string name="card_tambah_pegawai_nohp_aktif">tambah_pegawai_nohp_aktif</string>
    <string name="card_tambah_pegawai_alamat">tambah_pegawai_alamat</string>
    <string name="card_tambah_pegawai_nama">tambah_pegawai_nama</string>
    <string name="card_tambah_nama_layanan">tambah_nama_layanan</string>
    <string name="card_tambah_harga_layanan">tambah_harga_layanan</string>
    <string name="card_tambah_cabang_layanan">tambah_cabang_layanan</string>
    <string name="card_tambah_layanan_simpan">tambah_layanan_simpan</string>
    <string name="validasi_nama_layanan">nama_layanan</string>
    <string name="validasi_harga_layanan">harga_layanan</string>
    <string name="validasi_cabang_layanan">cabang_layanan</string>
    <string name="sukses_simpan_layanan">simpan_layanan</string>
    <string name="gagal_simpan_layanan">gagal_simpan_layanan</string>
    <string name="sukses_simpan_pelanggan">sukses_simpan_pelanggan</string>
    <string name="gagal_simpan_pelanggan">gagal_simpan_pelanggan</string>
    <string name="TambahPegawai">TambahPegawai</string>
    <string name="TambahPelanggan">TambahPelanggan</string>
    <string name="JudulLogin">JudulLogin</string>
    <string name="SubJudulLogin">SubJudulLogin</string>
    <string name="NoHp_Login">NoHp_Login</string>
    <string name="Pw_login">Pw_login</string>
    <string name="btnLogin">btnLogin</string>
    <string name="StatusPembayaran">StatusPembayaran</string>
    <string name="Layanan_Tambahan">Layanan_Tambahan</string>
    <string name="Total_Bayar">Total_Bayar</string>
    <string name="Btn_statuspembayaran">Btn_statuspembayaran</string>
    <string name="card_pelanggan_pilih_alamat">card_pelanggan_pilih_alamat</string>
    <string name="card_pelanggan_pilih_nohp">card_pelanggan_pilih_nohp</string>
    <string name="card_pelanggan_pilih_nama">card_pelanggan_pilih_nama</string>
    <string name="card_layanan_pilih_namaLayanan">card_layanan_pilih_namaLayanan</string>
    <string name="card_layanan_pilih_harga">card_layanan_pilih_harga</string>
    <string name="btntransaksi_pilihpelanggan">btntransaksi_pilihpelanggan</string>
    <string name="btntransaksi_pilihlayanan">btntransaksi_pilihlayanan</string>
    <string name="btntransaksi_tambahan">btntransaksi_tambahan</string>
    <string name="btntransaksi_proses">btntransaksi_proses</string>
    <string name="card_data_layanan_harga">card_data_layanan_harga</string>
    <string name="card_data_tambahkan_id">card_data_tambahkan_id</string>
    <string name="card_data_tambahkan_nama">card_data_tambahkan_nama</string>
    <string name="card_data_tambahkan_harga">card_data_tambahkan_harga</string>
    <string name="tambah_tambahan">tambah_tambahan</string>
    <string name="tambahan_nama">tambahan_nama</string>
    <string name="tambahan_harga">tambahan_harga</string>
    <string name="tambah_pelanggan">tambah_pelanggan</string>
    <string name="validasi_nama_tambahkan">validasi_nama_tambahkan</string>
    <string name="validasi_harga_tambahkan">validasi_harga_tambahkan</string>
    <string name="tambah_tambahanlayanan">tambah_tambahanlayanan</string>
    <string name="card_cabang_id">card_cabang_id</string>
    <string name="card_cabang_nama">card_cabang_nama</string>
    <string name="card_cabang_alamat">card_cabang_alamat</string>
    <string name="card_cabang_layanan">card_cabang_layanan</string>
    <string name="card_cabang_hubungi">card_cabang_hubungi</string>
    <string name="card_cabang_lihat">card_cabang_lihat</string>
    <string name="card_tambahan_cabang">card_tambahan_cabang</string>
    <string name="card_tambah_nama_cabang">card_tambah_nama_cabang</string>
    <string name="card_tambah_alamat_cabang">card_tambah_alamat_cabang</string>
    <string name="card_tambah_layanan_cabang">card_tambah_layanan_cabang</string>
    <string name="card_tambah_cabang_simpan">card_tambah_cabang_simpan</string>
    <string name="validasi_nama_cabang">validasi_nama_cabang</string>
    <string name="validasi_alamat_cabang">validasi_alamat_cabang</string>
    <string name="validasi_layanan_cabang">validasi_layanan_cabang</string>
    <string name="tambah_cabang">tambah_cabang</string>
    <string name="signUp">signUp</string>
    <string name="JudulSignUp">JudulSignUp</string>
    <string name="SubJudulSignUp">SubJudulSignUp</string>
    <string name="Nama_SignUp">Nama_SignUp</string>
    <string name="NoHp_SignUp">NoHp_SignUp</string>
    <string name="Pw_SignUp">Pw_SignUp</string>
    <string name="btnSignUp">btnSignUp</string>
    <string name="MyProfile">MyProfile</string>
    <string name="NamaPenggunaLogin">NamaPenggunaLogin</string>
    <string name="PersonalInformation">PersonalInformation</string>
    <string name="Name">Name</string>
    <string name="Passwordd">Passwordd</string>
    <string name="Phone">Phone</string>
    <string name="Bio">Bio</string>
    <string name="register_Nama">register_Nama</string>
    <string name="register_NOhp">register_NOhp</string>
    <string name="register_PW">register_PW</string>
    <string name="login_NoHP">login_NoHP</string>
    <string name="login_pw">login_pw</string>
    <string name="NamaTambahan">NamaTambahan</string>
    <string name="dialog_idPelanggan">dialog_idPelanggan</string>
    <string name="dialog_NamaPelanggan">dialog_NamaPelanggan</string>
    <string name="dialog_Alamat">dialog_Alamat</string>
    <string name="dialog_NoHP">dialog_NoHP</string>
    <string name="dialog_Terdaftar">dialog_Terdaftar</string>
    <string name="dialog_Sunting">dialog_Sunting</string>
    <string name="dialog_Hapus">dialog_Hapus</string>
    <string name="DetailPelanggan">DetailPelanggan</string>
    <string name="dialog_IDPegawai">dialog_IDPegawai</string>
    <string name="dialog_NamaPegawai">dialog_NamaPegawai</string>
    <string name="dialog_AlamatPegawai">dialog_AlamatPegawai</string>
    <string name="dialog_NoHPPegawai">dialog_NoHPPegawai</string>
    <string name="dialog_TerdaftarPegawai">dialog_TerdaftarPegawai</string>
    <string name="dialog_Cabang">dialog_Cabang</string>
    <string name="dialog_SuntingPegawai">dialog_SuntingPegawai</string>
    <string name="dialog_HapusPegawai">dialog_HapusPegawai</string>
    <string name="DetailPegawai">DetailPegawai</string>
    <string name="HubungiPelanggan">HubungiPelanggan</string>
    <string name="PilihMetodeMenghubungi">PilihMetodeMenghubungi:</string>
    <string name="BatalPelanggan">BatalPelanggan</string>
    <string name="HubungiPegawai">HubungiPegawai</string>
    <string name="PilihMetodeMenghubungiPegawai">PilihMetodeMenghubungiPegawai</string>
    <string name="BatalPegawai">BatalPegawai</string>
    <string name="PembayaranLaporan">PembayaranLaporan</string>
    <string name="PilihMetodePembayaranLaporan">PilihMetodePembayaranLaporan</string>
    <string name="BatalLaporan">BatalLaporan</string>
    <string name="metodePembayaran">metodePembayaran</string>
    <string name="metodePilihMetodePembayaran">metodePilihMetodePembayaran</string>
    <string name="metodeBatal">metodeBatal</string>
    <string name="DiambilPada">DiambilPada</string>
    <string name="IDTambahan">IDTambahan</string>
    <string name="DataPelanggan">DataPelanggan</string>
    <string name="DataPelangganNamaPelanggan">DataPelangganNamaPelanggan</string>
    <string name="DataPelangganNoHP">DataPelangganNoHP</string>
    <string name="DataPelangganLayananUtama">DataPelangganLayananUtama</string>
    <string name="DataPelangganNamaLayanan">DataPelangganNamaLayanan</string>
    <string name="DataPelangganHarga">DataPelangganHarga</string>
    <string name="DataPelangganLayananTambahan">DataPelangganLayananTambahan</string>
    <string name="IDTransaksi">IDTransaksi</string>
    <string name="Tanggal">Tanggal</string>
    <string name="RincianTambahan">RincianTambahan</string>
    <string name="Pelanggan">Pelanggan</string>
    <string name="Karyawan">Karyawan</string>
    <string name="SubtotalTambahan">SubtotalTambahan</string>
    <string name="TotalBayar">TotalBayar</string>
    <string name="KirimWhatsApp">KirimWhatsApp</string>
    <string name="Cetak">Cetak</string>
    <string name="KonfirmasiData">KonfirmasiData</string>
    <string name="KonfirmasiDataLayananTambahan">KonfirmasiDataLayananTambahan</string>
    <string name="KonfirmasiDataTotalBayar">KonfirmasiDataTotalBayar</string>
    <string name="KonfirmasiDataBatal">KonfirmasiDataBatal</string>
    <string name="KonfirmasiDataBayar">KonfirmasiDataBayar</string>
    <string name="EstimasiHariIni">EstimasiHariIni</string>
    <string name="Transaksi">Transaksi</string>
</resources>