<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="transaksi.transaksi">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTRANSAKSI_DATA_pelangga"
                android:text="@string/DataPelanggan"
                android:textStyle="bold"
                android:textSize="18sp"
                android:fontFamily="@font/poppinsbold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvTRANSAKSI_DATA_pelanggan_nama"
                android:text="@string/DataPelangganNamaPelanggan"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppinssemibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvTRANSAKSI_DATA_pelanggan_nohp"
                android:text="@string/DataPelangganNoHP"
                android:fontFamily="@font/poppinssemibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnPilihPelanggan"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppinsmedium"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:backgroundTint="#00BFFF"
                android:text="@string/btntransaksi_pilihpelanggan"
                android:textColor="@android:color/white"
                 />

            <TextView
                android:id="@+id/tvTRANSAKSI_layanan"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/DataPelangganLayananUtama"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvTRANSAKSI_layanan_nama"
                android:text="@string/DataPelangganNamaLayanan"
                android:fontFamily="@font/poppinssemibold"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvTRANSAKSI_layanan_harga"
                android:text="@string/DataPelangganHarga"
                android:fontFamily="@font/poppinssemibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnPilihLayanan"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:fontFamily="@font/poppinsmedium"
                android:backgroundTint="#00BFFF"
                android:text="@string/btntransaksi_pilihlayanan"
                android:textColor="@android:color/white"
               />

            <TextView
                android:id="@+id/tvTRANSAKSI_LayananTambahan"
                android:text="@string/DataPelangganLayananTambahan"
                android:fontFamily="@font/poppinsbold"
                android:textSize="18sp"
                android:layout_marginTop="9dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollLayananTambahan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/cardData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTRANSAKSI_LayananTambahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="layout/card_pilih_layanan_tambahan">

        </androidx.recyclerview.widget.RecyclerView>
    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTRANSAKSI_BAWAH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/btnTambah"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:text="@string/btntransaksi_tambahan"
                android:fontFamily="@font/poppinsmedium"
                android:backgroundTint="#FFD700" />

            <Button
                android:id="@+id/btnProses"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/btntransaksi_proses"
                android:fontFamily="@font/poppinsmedium"
                android:backgroundTint="#32CD32" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>