<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_Up">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/bgloginn2">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/rvlogo"
                android:contentDescription="Logo"
                android:layout_marginTop="-50dp"
                android:layout_marginEnd="140dp"/>

            <TextView
                android:id="@+id/tvJudulSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/JudulSignUp"
                android:layout_marginEnd="93dp"
                android:fontFamily="@font/poppinsbold"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tvSubJudulSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="77dp"
                android:text="@string/SubJudulSignUp"
                android:textColor="@android:color/white"
                android:fontFamily="@font/poppinsbold"
                android:textSize="13sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvNama_Register"
                android:text="@string/register_Nama"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppinsmedium"
                app:layout_constraintStart_toStartOf="parent"/>


            <EditText
                android:id="@+id/etNama_SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Nama_SignUp"
                android:inputType="text"
                android:fontFamily="@font/poppinssemibold"
                android:background="@drawable/edit_border_new"
                android:backgroundTint="@null"
                android:padding="12dp"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvNoHP_Register"
                android:text="@string/register_NOhp"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppinsmedium"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/etNoHp_SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NoHp_SignUp"
                android:inputType="phone"
                android:fontFamily="@font/poppinssemibold"
                android:background="@drawable/edit_border_new"
                android:backgroundTint="@null"
                android:padding="12dp"
                android:maxLength="14"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPW_Register"
                android:text="@string/register_PW"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppinsmedium"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.nilam.laundry.customview.TogglePasswordEditText
                android:id="@+id/etPass_SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Pw_SignUp"
                android:inputType="textPassword"
                android:fontFamily="@font/poppinssemibold"
                android:background="@drawable/edit_border_new"
                android:backgroundTint="@null"
                android:padding="12dp"
                android:layout_marginTop="8dp"
                android:drawableEnd="@drawable/ic_visibility_off"
                android:drawablePadding="10dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSignUp"
                android:layout_marginTop="24dp"
                android:background="@drawable/btn_gradient"
                android:textColor="@android:color/white"
                android:fontFamily="@font/poppinsbold"
                android:textStyle="bold"/>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>