<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@drawable/bglaundryyrill"
    android:layout_height="match_parent"
    tools:context=".TambahPegawai">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvJudul"
        android:text="@string/card_tambah_pegawai"
        android:layout_marginTop="80dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppinsbold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNama"
        android:text="@string/card_tambah_nama"
        app:layout_constraintTop_toBottomOf="@+id/tvJudul"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppinsmedium"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etNamaLengkap"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/card_tambah_namalengkap"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNama"
        android:padding="10dp"
        android:fontFamily="@font/poppinsmediumitalic"
        android:background="@drawable/edit_text_border"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvAlamat"
        android:text="@string/card_pelanggan_alamat"
        app:layout_constraintTop_toBottomOf="@+id/etNamaLengkap"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/poppinsmedium"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/etAlamat"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/card_pelanggan_alamat"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlamat"
        android:padding="10dp"
        android:fontFamily="@font/poppinsmediumitalic"
        android:background="@drawable/edit_text_border"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNoHp"
        android:text="@string/card_tambah_nohp_aktif"
        app:layout_constraintTop_toBottomOf="@+id/etAlamat"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/poppinsmedium"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/etNoHp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/card_tambah_nohp_aktif"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoHp"
        android:padding="10dp"
        android:fontFamily="@font/poppinsmediumitalic"
        android:background="@drawable/edit_text_border"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCabang"
        android:text="@string/card_pegawai_cabang"
        app:layout_constraintTop_toBottomOf="@+id/etNoHp"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/poppinsmedium"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/etCabang"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/card_nama_cabang"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCabang"
        android:padding="10dp"
        android:fontFamily="@font/poppinsmediumitalic"
        android:background="@drawable/edit_text_border"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/buttonSimpan"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/card_simpan"
        android:backgroundTint="#133E87"
        android:padding="12dp"
        android:fontFamily="@font/poppinssemibold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/etCabang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>