<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/bgloginn2">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/rvlogo"
                android:contentDescription="Logo"
                android:layout_marginTop="-50dp"
                android:layout_marginEnd="140dp"/>

            <TextView
                android:id="@+id/tvJudulLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/JudulLogin"
                android:layout_marginEnd="93dp"
                android:fontFamily="@font/poppinsbold"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tvSubJudul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="62dp"
                android:text="@string/SubJudulLogin"
                android:textColor="@android:color/white"
                android:fontFamily="@font/poppinsbold"
                android:textSize="13sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">
        <EditText
            android:id="@+id/etNoHp_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NoHp_Login"
            android:layout_marginBottom="15dp"
            android:inputType="phone"
            android:fontFamily="@font/poppinssemibold"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text_border"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etPass_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Pw_login"
            android:inputType="textPassword"
            android:fontFamily="@font/poppinssemibold"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_border"
            android:padding="12dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin"
            android:layout_marginTop="24dp"
            android:backgroundTint="#133E87"
            android:textColor="@android:color/white"
            android:fontFamily="@font/poppinsbold"
            android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>